--- a/webpack-esm.html
+++ b/webpack-esm.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>webpack library type: module</title>
+    <script src="./dist/umd/index.js"></script>
     <script type="module">
         import * as s from "./dist/webpack-esm/index.mjs";
         console.log(s);
